--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -90,7 +90,7 @@ p{
   transition: .3s;
   opacity: 0;
   pointer-events: none;
-  background: #007be0;
+  background: $primBtn;
   border-radius: 4px;
   text-decoration: none;
   display: flex;
@@ -98,6 +98,7 @@ p{
   align-items: center;
   border-radius: 4px;
   padding: 10px 13px;
+  box-shadow: 0 0 7px rgb(200,200,200);
   i{
     font-size: 19px;
     color: white;
