--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -77,6 +77,101 @@
   border-width: 2px;
   border-color: rgb(212, 212, 212);
 }
+.page .no-query #searchQNo {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  height: auto;
+  background: #06c484;
+  color: rgb(246, 246, 246);
+  font-size: 14px;
+  padding: 10px 18px;
+  font-weight: 500;
+  z-index: 10000;
+  opacity: 1 !important;
+}
+.page .no-query #searchQNo.sticky {
+  position: fixed;
+  top: 0px;
+  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+}
+.page .no-query i {
+  color: #06c484;
+  font-size: 40px;
+  margin-bottom: 10px;
+}
+.page .no-query h1 {
+  font-size: 22.5px;
+  color: #183b56;
+  font-weight: 500;
+}
+.page .no-query p {
+  color: #183b56;
+  font-size: 15px;
+  opacity: 0.8;
+}
+.page .no-query .no-query-search {
+  position: relative;
+  margin-top: 22px;
+  padding: 25px 15px;
+  background: rgba(185, 185, 185, 0.18);
+}
+.page .no-query .no-query-search i {
+  position: absolute;
+  font-size: 15px;
+  color: rgba(24, 59, 86, 0.662745098);
+  right: 35px;
+  top: 43px;
+  background: rgb(246, 246, 246);
+  padding: 17px 16px;
+  margin: -17px -16px;
+  padding-top: 18px;
+  margin-top: -18px;
+  border-radius: 4px;
+}
+.page .no-query .no-query-search i::before {
+  padding: 7px;
+  margin: -7px;
+  background: rgba(155, 155, 155, 0.22);
+  border-radius: 100%;
+}
+.page .no-query .no-query-search input {
+  width: 88%;
+  height: 50px;
+  border: none;
+  outline: none;
+  padding: 7px 17px;
+  background: rgb(246, 246, 246);
+  color: #183b56;
+  border-radius: 4px;
+  font-size: 15px;
+}
+.page .no-query .no-query-search input::-moz-placeholder {
+  color: #183b56;
+  opacity: 0.8;
+}
+.page .no-query .no-query-search input:-ms-input-placeholder {
+  color: #183b56;
+  opacity: 0.8;
+}
+.page .no-query .no-query-search input::placeholder {
+  color: #183b56;
+  opacity: 0.8;
+}
+.page .no-query .no-query-search button {
+  font-size: 14.5px;
+  background: #06c484;
+  color: rgb(246, 246, 246);
+  text-align: center;
+  width: 100%;
+  height: 45px;
+  margin-top: 15px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  font-weight: normal;
+}
 .page .search-results {
   padding-top: 245px;
 }
