--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -390,7 +390,7 @@ $txt: #183b56;
             margin-block: 15px;
             margin-top: 20px;
             text-align: left;
-            background: rgba(205, 205, 205, 0.16);
+            background: rgba(205, 205, 205, 0.12);
             padding: 10px 15px;
             display: none;
             label{
@@ -440,6 +440,7 @@ $txt: #183b56;
                 outline: none;
                 border: none;
                 border-radius: 4px;
+                font-weight: 400;
             }
             i{
                 margin: 5px 6px;
