--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -32,9 +32,9 @@
     </div>
     <!-- SIDEBAR -->
     <div class="sidebar" id="sidebar">
-        <a href="">Om oss</a>
-        <a href="">Alle tjenester</a>
-        <a href="">Kundeservice</a>
+        <a href="/om-oss/">Om oss</a>
+        <a href="/blogg/">Blogg</a>
+        <a href="/alle-tjenester/">Alle tjenester</a>
         <a class="nav_order_btn" href="">For bedrifter</a>
         &nbsp;
         <hr style="background: rgba(150,150,150,0.05);">
