--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -2,29 +2,23 @@
 {% load static %}
 
 
-
-
 {% block content %}
+<link rel="stylesheet" href="{% static '/scss/page/all-pr.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
-<link rel="stylesheet" href="{% static '/scss/store/product/category.css' %}" type="text/css">
-<script rel="stylesheet" src="{% static '/js/category.js' %}" type="text/javascript"></script>
-<link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
-<script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
-<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
-<script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+<script rel="stylesheet" src="{% static '/js/allpr.js' %}" type="text/javascript"></script>
 
-
-<!-- Only on some pages -->
-<div class="category-search" id="categorySearch">
-    <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
-       {% csrf_token %}
-       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-   </form>
- </div>
- <p class="category-q" id="categoryQ">Du ser nå på kategorien <strong>{{category.name}}</strong></p>
 <div class="page">
-    <div class="categories" style="padding-inline: 6px;">
-        {% for product in product %}
+    <!-- Only on some pages -->
+    <div class="allpr-search" id="allPrSearch">
+            <form id="allPrForm" action="{% url 'home_page_search' %}" method="GET">
+            {% csrf_token %}
+            <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+    </div>
+    <p class="allpr-q" id="allPrQ">Alle tjenester</p>
+
+    <div class="services">
+        {% for product in products %}
         <div class="service" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
             <img src="{{product.image.url}}" alt="" class="service-image">
             <div class="reviews">
@@ -37,11 +31,10 @@
             <div class="name">{{product.name}}</div>
             <div class="business-name">{{product.business_name}}</div>
          </div>
-        {% endfor %}
+         {% endfor %}
     </div>
 </div>
-
-{% for product in product %}
+{% for product in products %}
 <script type="text/javascript">
 
    let avrg = '{{product.get_rating|floatformat:0}}'
@@ -53,6 +46,7 @@
       text.innerHTML = Math.trunc(avrg)
    }
    getRating();
+
 </script>
-{% endfor %}
+{% endfor %}   
 {% endblock %}
