--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -221,6 +221,9 @@
     avrg = parseInt(avrg) / parseInt('{{product.reviews.all.count}}')
 
     text.innerHTML = Math.trunc(avrg)
+
+    // Visitors
+    console.log('Antall visninger {{ num_visits }}')
   }
 
   getRating();
